# HINF5300

./: .gitignore  README.md  pyproject.toml
assignment/activity_recognition/: a2_activity_recognition_YunaWatanabe.ipynb  extract_features.py
assignment/step_count/: a1_step_count.ipynb
assignment/step_count/data/phone_in_backpack/: acce.csv  linacce.csv  step.csv
assignment/step_count/data/phone_in_hand/: acce.csv  linacce.csv  step.csv
assignment/step_count/data/phone_in_hand_down/: acce.csv  linacce.csv  step.csv
assignment/step_count/data/phone_in_hand_slow/: acce.csv  linacce.csv  step.csv
assignment/step_count/data/phone_in_hand_up_down/: acce.csv  linacce.csv  step.csv
assignment/step_count/data/phone_in_right_pocket/: acce.csv  linacce.csv  step.csv
assignment/step_count/data_short/phone_in_backpack/: acce.csv  linacce.csv  step.csv
assignment/step_count/data_short/phone_in_hand/: acce.csv  linacce.csv  step.csv
assignment/step_count/data_short/phone_in_hand_down/: acce.csv  linacce.csv  step.csv
assignment/step_count/data_short/phone_in_hand_slow/: acce.csv  linacce.csv  step.csv
assignment/step_count/data_short/phone_in_right_pocket/: acce.csv  linacce.csv  step.csv
assignment/step_count/data_short/phone_in_shoulder_bag/: acce.csv  linacce.csv  step.csv
assignment/stress_detection/: a3_stress_detection.ipynb
reference/: FrequencyDomainNoiseRemoval.ipynb  TimeDomainNoiseRemoval.ipynb  TuningDecisionTree.ipynb
src/hinf5300/: __init__.py
