[project]
name = "hinf5300"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Yuna Watanabe", email = "yuna-watanabe1923@g.ecc.u-tokyo.ac.jp" }
]
dependencies = [
    "matplotlib>=3.9.2",
    "numpy==2.0.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "ipykernel>=6.29.5",
    "tabulate>=0.9.0",
    "flirt>=0.0.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hinf5300"]
